fix(ui): Filters - remove control extra margin

--- a/packages/ui/src/ui/filters/filters.module.css
+++ b/packages/ui/src/ui/filters/filters.module.css
@@ -13,6 +13,7 @@
 }
 
 .filterControl {
+  margin: 0;
   flex: 0 0 auto;
   height: 1em;
 }
